# voce

./: .gitignore  Buildfile  CMakeLists.txt  build.xml  changelog.txt  gatherRelease.bat  license-BSD.txt  readme.txt
doxygen/: Doxyfile_c++
lib/: readme.txt
old/: build.sh  genMethodSignatures.bat
samples/: CMakeLists.txt  build.xml
samples/playpen/: readme.txt
samples/playpen/playpen/: main.cpp
samples/playpen/src/: BaseOpalApp.h  ExampleFrameListener.h  PhysicalCamera.h  PhysicalEntity.h  TemplateApp.cpp
samples/recognitionTest/c++/: recognitionTest.cpp
samples/recognitionTest/java/: build.sh  recognitionTest.java  run.sh
samples/synthesisTest/: CMakeLists.txt
samples/synthesisTest/c++/: CMakeLists.txt  SConstruct  synthesisTest.cpp
samples/synthesisTest/java/: synthesisTest.java
src/c++/: voce.h
src/c++/voce/: voce.h
src/java/voce/: SpeechInterface.java  SpeechRecognizer.java  SpeechSynthesizer.java  Utils.java  build.sh
src/main/java/: SpeechInterface.java  SpeechSynthesizer.java
trunk/: changelog.txt
trunk/doxygen/: Doxyfile_java
trunk/samples/playpen/: readme.txt
trunk/samples/playpen/src/: PhysicalCamera.h
trunk/samples/recognitionTest/c++/: SConstruct  recognitionTest.vcproj
trunk/samples/recognitionTest/java/: recognitionTest.java
trunk/samples/synthesisTest/c++/: synthesisTest.sln
trunk/samples/synthesisTest/java/: build.bat
trunk/voce/: changelog.txt  gatherRelease.bat  readme.txt  todo.txt
trunk/voce/lib/: voce.config.xml
trunk/voce/src/c++/: voce.h
trunk/voce/web/: index.html
(+35 files in other folders)
